--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -35,6 +35,7 @@
 @import 'cmps/stay-preview';
 @import 'cmps/stay-filter';
 @import 'cmps/stay-filter-modal';
+@import 'cmps/search-guests-modal';
 
   //STAY-DETAILS
 @import 'cmps/amenities';
