--- a/src/styles/cmps/_hosting-list.scss
+++ b/src/styles/cmps/_hosting-list.scss
@@ -1,44 +1,47 @@
-table {
-    // border: 1px solid $clr3;
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 1em;
-    min-width: 300px;
-    border-radius: 5px 5px 0 0;
-    overflow: hidden;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-}
+.hosting-list {
+    table {
+        // border: 1px solid $clr3;
+        border-collapse: collapse;
+        margin: 25px 0;
+        font-size: 1em;
+        // min-width: 1040px;
+        width: 1000px;
+        border-radius: 5px 5px 0 0;
+        overflow: hidden;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    }
 
-thead tr {
-    // border: 1px solid $clr3;
-    background-color: #009879;
-    color: #ffffff;
-    text-align: left;
-    font-weight: bold;
-}
+    thead tr {
+        // border: 1px solid $clr3;
+        background-color: #009879;
+        color: #ffffff;
+        text-align: left;
+        font-weight: bold;
+    }
 
-th,
-td {
-    padding: 12px 15px;
-}
+    th,
+    td {
+        padding: 12px 15px;
+    }
 
-th {
-    white-space: nowrap;
-}
+    th {
+        white-space: nowrap;
+    }
 
-tbody tr {
-    border-bottom: 1px solid #dddddd;
-}
+    tbody tr {
+        border-bottom: 1px solid #dddddd;
+    }
 
-tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
+    tbody tr:nth-of-type(even) {
+        background-color: #f3f3f3;
+    }
 
-tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
-}
+    tbody tr:last-of-type {
+        border-bottom: 2px solid #009879;
+    }
 
-tbody tr.active-row {
-    font-weight: bold;
-    color: #009879
+    tbody tr.active-row {
+        font-weight: bold;
+        color: #009879
+    }
 }
