--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -8,7 +8,8 @@
     --border-width: 1px;
     --border-color: #DDDDDD;
     --right: 4%;
-    --font-color: #f7f7f7;
+    --font-color: #222222;
+    --logo-color: #FF385C;
 }
 
 //COLOR PATTERNS
