--- a/src/styles/cmps/_search-guests-modal.scss
+++ b/src/styles/cmps/_search-guests-modal.scss
@@ -2,16 +2,23 @@
     border: solid 1px $clr9;
 
         display: flex;
+        // position: absolute;
         position: fixed;
         line-height: 25px;
         top: 0;
         left: 0;
+        // bottom: 55px;
+        // left: 0;
         // width: 100%;
+        // background-color: #fff;
+
         background-color: $clr8;
         color:$clr3;
         border-radius: 12px;
         box-shadow: 0 2px 4px rgb(0 0 0 / 18%);
-        z-index: 100;
+        z-index: 2000;
+        // padding: 20px;
+
         padding: 40px;
         gap: 20px;
 
