--- a/src/styles/cmps/_stay-filter-modal.scss
+++ b/src/styles/cmps/_stay-filter-modal.scss
@@ -24,34 +24,9 @@
         font-size: rem(18px);
     }
 
-    // .property-type-labels {
-    //     display: flex;
-    //     gap: rem(20px)
-    // }
-
-    // .property-type-btn {
-    //     display: flex;
-    //     flex-direction: column;
-    //     justify-content: space-between;
-    //     gap: rem(10px);
-    //     padding:rem(20px);
-    //     width: rem(170px);
-    //     height: rem(120px);
-    //     border: solid 1px $clr9;
-    //     border-radius: 15px;
-    //     font-weight: bold;
-    //     font-size: rem(16px);
-
-    //     img{
-    //         width: rem(30px);
-    //         height: rem(30px);
-
-    //     }
-    // }
-
     .modal-title {
         display: flex;
-        justify-content: space-between;
+        // justify-content: space-between;
         align-items: center;
         padding: 10px 25px;
         font-weight: bold;
@@ -59,6 +34,10 @@
         color: $clr3;
         border-bottom: solid 1px $clr9;
         flex: 1;
+
+       .title{
+           flex-basis: 200px;
+       }
 
     }
 
@@ -74,7 +53,6 @@
         >* {
             padding: rem(20px) 0;
             border-bottom: solid 1px $clr9;
-
         }
 
         .title {
@@ -88,13 +66,13 @@
             display: flex;
             gap: rem(20px)
         }
-    
+
         .property-type-btn {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             gap: rem(10px);
-            padding:rem(20px);
+            padding: rem(20px);
             width: rem(170px);
             height: rem(120px);
             border: solid 1px $clr9;
@@ -102,14 +80,14 @@
             font-weight: bold;
             font-size: rem(16px);
             color: $clr3-opacity;
-    
-            img{
+
+            img {
                 width: rem(30px);
                 height: rem(30px);
-    
+
             }
 
-            &.selected{
+            &.selected {
                 border: solid 2px $clr3;
                 background-color: $clr6-opacity;
             }
@@ -119,36 +97,68 @@
         .amenities-content {
             padding: 12px 0;
             display: flex;
+            border: none;
+
 
             >* {
                 flex-basis: 50%;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+
+                >* {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                }
             }
 
+            input {
+                width: rem(23px);
+                height: rem(23px);
+                color: $clr9;
+               }
         }
 
         .price {
             input {
+                margin-inline-start: rem(35px);
+                margin-top: rem(45px);
                 -webkit-appearance: none;
-                background-color: $clr2;
+                background-color: $clr9;
                 height: 2px;
-                width: 60%;
+                width: 90%;
                 border: none;
             }
-        .minmax-container{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: rem(35px);
-            
-            .minmax{
-                width: rem(310px);
-                height: rem(60px);
-                border: solid 1px $clr9;
-                border-radius: 10px;
-                padding: 10px;
-                font-size: rem(14px);
 
+
+            input[type='range']::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                background: none;
+                position: relative;
+                height: 25px;
+                width: 25px;
+                background: #fff;
+                border: 1px solid $clr9;
+                border-radius: 25px;
+                z-index: 1;
             }
+
+            .minmax-container {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: rem(35px);
+
+                .minmax {
+                    width: rem(310px);
+                    height: rem(60px);
+                    border: solid 1px $clr9;
+                    border-radius: 10px;
+                    padding: 10px;
+                    font-size: rem(14px);
+
+                }
 
             }
 
@@ -166,8 +176,8 @@
         width: 100%;
         background-color: $clr8;
         border-top: solid 1px $clr9;
-        border-bottom-left-radius:15px;
-        border-bottom-right-radius:15px;
+        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 15px;
 
 
         .show-btn {
