--- a/src/styles/cmps/_stay-preview.scss
+++ b/src/styles/cmps/_stay-preview.scss
@@ -34,12 +34,11 @@
 
     .bold {
         color: $clr3;
-        // font-family: Circular-Bold;
         font-weight: 600;
     }
 
     .light {
-        font-family: Circular-Light;
+        font-weight: 400;
     }
 
     .icon {
