--- a/src/styles/cmps/_user-menu-modal.scss
+++ b/src/styles/cmps/_user-menu-modal.scss
@@ -2,7 +2,7 @@
     background-color: #fff;
     border-radius: 20px;
     // box-shadow: 3px 2px 3px #ebebeb;
-    height: 240px;
+    height: 210px;
     overflow: hidden;
     position: absolute;
     right: var(--right);
@@ -34,6 +34,10 @@
     li {
         padding-left: 15px;
         font-size: rem(14px);
+        // height: 50px;
+        // height: 25%;
+        // width: 100%;
+        // padding-top: 20px;
     }
 
     .menu-limit {
