--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -15,6 +15,18 @@
             height: 12px;
             margin-right: 7px;
         }
+
+        :nth-child(2) svg{
+            margin-right: 8px;
+        }
+
+        :nth-child(2) span {
+            text-decoration: underline;
+            color: $clr3;
+            font-family: Circular-Light;
+            font-weight: 600;
+            font-size: rem(14px);
+        }
     }
 
     .stay-info-container {
