--- a/src/styles/cmps/_user-menu-modal.scss
+++ b/src/styles/cmps/_user-menu-modal.scss
@@ -34,10 +34,15 @@
     li {
         padding-left: 15px;
         font-size: rem(14px);
+        cursor: pointer;
         // height: 50px;
         // height: 25%;
         // width: 100%;
         // padding-top: 20px;
+
+        &:hover {
+            // background-color: $clr6-opacity;
+        }
     }
 
     .menu-limit {
