--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -26,6 +26,8 @@
         padding: 10px 0 10px;
         // border: solid 1px black;
         height: rem(70px);
+        white-space: nowrap;
+
 
         img {
             height: rem(24px);
