--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -8,6 +8,7 @@
     position: var(--position);
     width: 100%;
     color: var(--font-color);
+    z-index: 20;
 
     >* {
         flex: 1;
@@ -90,6 +91,7 @@
     }
 
     .search-container {
+        position: relative;
 
         .stay-search{
             display: flex;
@@ -125,20 +127,35 @@
 
             span {
                 padding: 0px;
+                color: $clr9;
+                font-size: 20px;
+                font-weight: 100;
             }
 
             .btn {
                 font-family: Circular-Light;
                 font-size: 14px;
+                color:$clr3-opacity;
+                font-weight: 600;
+                border-left: solid 1px $clr9;
             }
 
             input{
-                width: 100%;
+                width: 67px;
                 border: none;
+                color:$clr3-opacity;
                 &:focus {
                     outline: none;
                 }
+
             }
+
+            ::placeholder { 
+                font-family: Circular-Light;
+                font-size: 14px;
+                color:$clr3-opacity;
+                font-weight: 600;
+              }
 
             .search-btn {
                 background: #ff385c;
