--- a/src/styles/cmps/_checkout.scss
+++ b/src/styles/cmps/_checkout.scss
@@ -255,4 +255,15 @@
         --size: 200px;
     }
 
+    .rdrCalendarWrapper {
+        position: absolute;
+        z-index: 30;
+        right: 5px;
+    }
+
 }
+
+.rdrDayToday .rdrDayNumber span:after {
+    background: transparent;
+    }
+    
