--- a/src/styles/cmps/_hosting-list.scss
+++ b/src/styles/cmps/_hosting-list.scss
@@ -1,11 +1,9 @@
 .hosting-list {
 
     table {
-        // border: 1px solid $clr3;
         border-collapse: collapse;
         margin: 25px 0;
         font-size: 1em;
-        // min-width: 1040px;
         width: 1100px;
         border-radius: 5px 5px 0 0;
         overflow: hidden;
@@ -13,7 +11,6 @@
     }
 
     thead tr {
-        // border: 1px solid $clr3;
         background-color: #009879;
         color: #ffffff;
         text-align: left;
@@ -38,7 +35,7 @@
     }
 
     tbody tr:last-of-type {
-        border-bottom: 2px solid #009879;
+        // border-bottom: 2px solid $clr3;
     }
 
     tbody tr.active-row {
