--- a/src/styles/cmps/_order-status-modal.scss
+++ b/src/styles/cmps/_order-status-modal.scss
@@ -3,10 +3,7 @@
     border-radius: 10px;
     width: rem(150px);
     height: rem(230px);
-    position: fixed;
-    top: 25%;
-    left: 68%;
-    transform: translate(-50%, -50%);
+    position: absolute;
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
     z-index: 10;
     padding: 20px;
