--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,6 +37,7 @@
 @import 'cmps/stay-filter';
 @import 'cmps/stay-filter-modal';
 @import 'cmps/search-guests-modal';
+@import 'cmps/search-calender-modal';
 
   //STAY-DETAILS
 @import 'cmps/amenities';
