--- a/src/styles/cmps/_stay-filter-modal.scss
+++ b/src/styles/cmps/_stay-filter-modal.scss
@@ -7,7 +7,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 10;
+    z-index: 30;
 
     display: flex;
     flex-direction: column;
@@ -37,6 +37,10 @@
 
        .title{
            flex-basis: 200px;
+       }
+
+       .close-btn{
+           margin-right: rem(300px)
        }
 
     }
