--- a/src/styles/cmps/_checkout.scss
+++ b/src/styles/cmps/_checkout.scss
@@ -64,7 +64,7 @@
         background-color: #fff;
         border-radius: 12px;
         box-shadow: 0 2px 4px rgb(0 0 0 / 18%);
-        z-index: 2000;
+        z-index: 40;
         padding: 20px;
         gap: 20px;
         transition: 4s;
@@ -257,8 +257,8 @@
 
     .rdrCalendarWrapper {
         position: absolute;
-        z-index: 30;
-        right: 5px;
+        z-index: 50;
+        width: 100%;
     }
 
 }
