--- a/src/styles/cmps/_order-preview.scss
+++ b/src/styles/cmps/_order-preview.scss
@@ -1,11 +1,16 @@
 .order-preview {
-    
+
     td {
         white-space: nowrap;
     }
 
     td:nth-child(7) {
         font-weight: 600;
+        cursor: pointer;
+
+        &:hover {
+            opacity: 0.8;
+        }
     }
 
     .green {
