--- a/src/styles/cmps/_order-status-modal.scss
+++ b/src/styles/cmps/_order-status-modal.scss
@@ -4,6 +4,8 @@
     width: rem(150px);
     height: rem(230px);
     position: absolute;
+    right: 620px;
+    top: 154px;
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
     z-index: 10;
     padding: 20px;
