--- a/src/styles/cmps/_search-calender-modal.scss
+++ b/src/styles/cmps/_search-calender-modal.scss
@@ -7,7 +7,8 @@
     top:63px;
     
     // bottom: -300px;
-    right: 25px;
+    right: 50%;
+    transform: translateX(50%);
     background-color: $clr8;
     color: $clr3;
     border-radius: 25px;
