--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,6 +25,7 @@
 @import 'cmps/app-footer';
 @import 'cmps/user-menu-modal';
 @import 'cmps/user-msg';
+@import 'cmps/stay-search';
 
 //HOME
 @import 'cmps/top-rated-list';
