--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -4,6 +4,9 @@
     align-items: center;
     height: rem(125px);
     background-color: $clr8;
+    // position: sticky;
+    // top: 80px;
+    // z-index: 30;
 
     .labels-container {
         display: flex;
