--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -2,6 +2,7 @@
 
 :root {
     --padding: 80px;
+    // --position: block;
     --position: sticky;
     --grid-column: 2;
     --border-style: solid;
@@ -38,3 +39,9 @@ $detailsLayoutPadding: 400px;
 //BUTTON
 
 $btnBorderRadius: 10px;
+
+@media (max-width: 580px) {
+    :root {
+        --padding: 20px;
+    }
+}
