added trips+wishlist => need to fix a bug with wishlist

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -55,3 +55,7 @@
  @import 'cmps/order-status-modal.scss';
  @import 'cmps/hosting-list';
  @import 'cmps/hosting-preview';
+
+ //TRIPS
+ @import 'cmps/trip-list.scss';
+ @import 'cmps/trip-preview.scss';
