--- a/src/styles/cmps/_order-list.scss
+++ b/src/styles/cmps/_order-list.scss
@@ -3,7 +3,7 @@
         border-collapse: collapse;
         margin: 25px 0;
         font-size: 1em;
-        width: 1100px;
+        width: 1250px;
         border-radius: 5px 5px 0 0;
         overflow: hidden;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -27,6 +27,7 @@
 
     tbody tr {
         border-bottom: 1px solid #dddddd;
+        position: relative;
     }
 
     tbody tr:nth-of-type(even) {
