--- a/src/styles/cmps/_order-status-modal.scss
+++ b/src/styles/cmps/_order-status-modal.scss
@@ -2,31 +2,31 @@
     border: solid 1px $clr9;
     border-radius: 10px;
     width: rem(150px);
-    height: rem(230px);
+    height: rem(150px);
     position: absolute;
-    right: 620px;
-    top: 154px;
+    right: 75px;
+    top: -54px;
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
-    z-index: 10;
-    padding: 20px;
+    z-index: 100;
+    padding: 0 10px 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     background-color: $clr8;
 
     .modal-title {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-bottom: 10px;
+        align-self: flex-end;
+        padding-bottom: 5px;
         font-weight: bold;
         font-size: rem(16px);
         color: $clr3;
-        border-bottom: solid 1px $clr9;
 
         .exit-icon {
-            width: 20px;
-            height: 20px;
+            width: 19px;
+            height: 19px;
+        }
+
+        .close-btn {
+            padding: 3px 0 0 0;
         }
     }
 
@@ -37,6 +37,7 @@
         justify-content: center;
         height: 200px;
         justify-content: space-evenly;
+        gap: 5px;
 
         >* {
             cursor: pointer;
@@ -44,6 +45,10 @@
             width: 100%;
             height: 50px;
             padding: 0 10px;
+
+            &:hover {
+                opacity: 0.92;
+            }
         }
 
         div:first-of-type {
@@ -52,12 +57,6 @@
 
         div:last-of-type {
             background-color: #e61e4d;
-        }
-
-        .approve-icon,
-        .decline-icon {
-            width: 35px;
-            height: 35px;
         }
 
         span {
