--- a/src/styles/pages/_host.scss
+++ b/src/styles/pages/_host.scss
@@ -4,7 +4,7 @@
     grid-template-columns: 4fr 3fr;
 
     .hosting-header {
-        width: 1100px;
+        width: 1250px;
         padding-top: 30px;
 
         :nth-child(2) {
@@ -50,7 +50,8 @@
 
         .orders,
         .income,
-        .rate {
+        .rate,
+        .guests {
 
             :last-child {
                 padding-top: 10px;
