--- a/src/styles/cmps/_order-list.scss
+++ b/src/styles/cmps/_order-list.scss
@@ -38,4 +38,10 @@
         font-weight: bold;
         color: #009879
     }
+
+    .paging-icon {
+        height: 22px;
+        width: 22px;
+        cursor: pointer;
+    }
 }
