Added order details to modal, fixed modals UI

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -66,7 +66,7 @@
             width: 50%;
             height: 100%;
             font-size: rem(64px);
-            font-weight: 600 !important;
+            font-weight: 600;
             color: $clr8;
     
             .mouse-cursor-gradient-tracking {
