--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -2,6 +2,7 @@
 
 :root {
     --padding: 80px;
+    --overflow: unset;
     // --position: block;
     // --position: sticky;
     --grid-column: 2;
