--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -39,3 +39,14 @@
 .fixed{
     position: fixed;
 }
+
+.modal-background{
+    position: absolute;
+    // top: 0;
+    // left: 0;
+    height: 100vh;
+    width: 100%;
+    z-index: 60;
+    background-color:$clr3-opacity-2;
+}
+
