--- a/src/styles/cmps/_stay-filter-modal.scss
+++ b/src/styles/cmps/_stay-filter-modal.scss
@@ -2,7 +2,7 @@
     border: solid 1px $clr9;
     border-radius: 15px;
     width: rem(780px);
-    height: rem(530px);
+    height: rem(600px);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -55,6 +55,10 @@
         height: rem(380px);
 
         >* {
+            padding: rem(20px) 0;
+        }
+        
+        >*:not(:last-child) {
             padding: rem(20px) 0;
             border-bottom: solid 1px $clr9;
         }
